# argonaut

./: .gitignore  DEVELOPING.md  LICENSE  Makefile  Makefile.am  README.md  argonaut  argonaut.ui  config.h.in  configure.ac  setup.py
argonautics/: deletion_prompter.py  directory_filler.py  directory_monitor.py  file_deleter.py  file_manager.py  file_opener.py  file_selection.py  menu_sensitizer.py  selected_files_iterator.py  ui.py
argonautics/test/: file_selection_test.py  menu_sensitizer_test.py  ui_test.py
argonautics/test/support/: mock_builder.py  mock_file_manager.py  mock_file_opener.py  mock_file_selection.py  mock_icon_view.py  mock_menu_item.py  mock_menu_sensitizer.py  mock_widget.py
data/: Makefile.am  org.bitptr.argonaut.desktop.in
man/: Makefile.am
man/man1/: argonaut.1
src/: Makefile.am  callbacks.c  callbacks.h  cb_data.c  compat.c  compat.h  desktop.c  desktop.h  directory.c  directory.h  dnd.c  dnd.h  drag.c  drag.h  drop.c  drop.h  extern.h  file.c  file.h  global.h  grid.c  grid.h  main.c  main.h  pathnames.h  signals.c  signals.h  state.c  state.h  store.c  store.h  thumbnail.c  thumbnail.h  watcher.c  watcher.h  window.c  window.h
