AC_PREREQ([2.69])
AC_INIT([argonaut], [0.1])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_CHECK_FUNCS([strlcpy])
AX_PATH_BDB([4],[
  LIBS="$BDB_LIBS $LIBS"
  LDFLAGS="$BDB_LDFLAGS $LDFLAGS"
  CPPFLAGS="$CPPFLAGS $BDB_CPPFLAGS"
])
PKG_CHECK_MODULES([GTK], [gtk+-3.0])
PKG_CHECK_MODULES([GIO], [gio-2.0])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  man/Makefile
  data/Makefile
])
AC_OUTPUT
